--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <div class="container text-center" data-aos="zoom-out" data-aos-delay="100">
         <div class="row justify-content-center">
           <div class="col-lg-8">
-            <h2>Kelly Adams</h2>
+            <h2>Tun Lin Aung</h2>
             <p>I'm a professional illustrator from San Francisco</p>
             <a href="about.html" class="btn-get-started">About Me</a>
           </div>
